Added game component
Also added event bus, for events when using events on non-direct parent-child components.

With tests! Woop.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>fundingcircle</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css"/>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   </body>
 </html>
